@@ -56,8 +56,6 @@ import sourceloadlib
 import db
 
 db.setTrace()
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
 
 #globals
 
