@@ -77,9 +77,6 @@ import mgi_utils
 import loadlib
 import db
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 #
 # CONSTANTS
 #
