@@ -1,3 +1,9 @@
+TAG: seqcacheload-6-0-7-1
+DATE: 01/04/2017
+STAFF: lec 
+CHANGES:
+1) TR12069/obsolete db.setAutoTranslate()
+
 TAG: seqcacheload-6-0-4-1
 DATE: 06/16/2016
 STAFF: lec
